# Calendario

./: .gitignore  CHANGELOG.md  ControlDeCobros.spec  README.md  historial_cobros.xlsx  pyproject.toml  requirements.txt
app/: main.py
data/: database.py  export.py  mappers.py  models.py  repositories.py  types.py
domain/: calculations.py  dashboard.py  entities.py  enums.py  schedule.py
tests/data/: conftest.py  test_borrower_repository.py  test_export.py  test_installment_repository.py  test_loan_repository.py  test_payment_repository.py
tests/domain/: test_calculations.py  test_dashboard.py  test_irr.py  test_schedule.py
ui/: analysis_tab.py  borrowers_tab.py  bulk_payment_dialog.py  collections_tab.py  dashboard_tab.py  icons.py  loan_dialog.py  loans_tab.py  main_window.py  map_dialog.py  payment_dialog.py  status_colors.py  theme.py
