[project]
name = "control-cobros"
version = "0.1.0"
description = "App de escritorio para control de prestamos, calendario de cobros y rendimiento real"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.6",
    "SQLAlchemy>=2.0",
    "numpy-financial>=1.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]
build = [
    "pyinstaller>=6.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["domain*", "data*", "ui*", "app*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
